# llm-eval-compass

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  engine.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
benchmarks/: README.md
benchmarks/chatbot_arena/: scraper.py
benchmarks/custom/: README.md  template.json
benchmarks/gsm8k/: runner.py
benchmarks/humaneval/: problems.json  runner.py
benchmarks/mmlu/: runner.py  sample_questions.json
ci/: README.md
ci/scripts/: compare_to_baseline.py  run_ci_evals.sh
config/: eval_weights.yaml  models.yaml  thresholds.yaml
connectors/: __init__.py  anthropic_connector.py  base.py  bedrock_connector.py  factory.py  google_connector.py  mistral_connector.py  mock_connector.py  openai_connector.py
decisions/: README.md  template.md
decisions/examples/: 2026-04-15_production_model_upgrade.md  2026-05-01_rag_model_selection.md
docs/: adding_a_new_model.md  getting_started.md  glossary.md  production_monitoring.md  scorecard_guide.md  writing_test_cases.md
evaluators/: __init__.py  base_evaluator.py
evaluators/compliance/: ai_act_classifier.py  data_residency.py  gdpr_checker.py
evaluators/cost/: cost_calculator.py  (+2 more)
integrations/: README.md
notebooks/: 01_quickstart.ipynb  02_rag_evaluation.ipynb  03_model_comparison.ipynb  04_cost_modeling.ipynb  05_safety_audit.ipynb  06_production_monitoring.ipynb
pipelines/: README.md  model_comparison.py  rag_eval_pipeline.py  single_model_eval.py
reports/: README.md
scorecards/: README.md
site/: _config.yml  index.md
(+44 files in other folders)
